# chartarr

./: .gitignore  LICENSE  README.md  pyproject.toml
chartarr/: __init__.py  cli.py  demo.py  lidarr.py  matcher.py  review.py  screen.py  ui.py
examples/: sample.csv
scripts/: make_demo.py
tests/: test_cli.py  test_demo.py  test_matcher.py
