[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chartarr"
version = "0.1.0"
description = "Feed your album charts to Lidarr — match a CSV of albums to MusicBrainz and import them as monitored albums."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "chartarr contributors" }]
keywords = ["lidarr", "musicbrainz", "rateyourmusic", "music", "import", "csv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = ["requests>=2.28", "rich>=13.0"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/alperien/chartarr"
Issues = "https://github.com/alperien/chartarr/issues"

[project.scripts]
chartarr = "chartarr.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["chartarr"]
